tests/snapshots/cmd_generate_triggers__issue_comment_trigger.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_comment_bot.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/comment.ts ---
workflow("Comment Bot", {
  on: triggers({
    issue_comment: { types: ["created"] }
  }),
  jobs(ctx) {
    ctx.job("Respond", {
      runs_on: "ubuntu-latest",
      steps() { run("echo comment received") }
    })
  }
})
--- .github/workflows/generated_comment_bot.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Comment Bot
on:
  issue_comment:
    types:
    - created
jobs:
  respond:
    name: Respond
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo comment received
