tests/snapshots/cmd_generate_triggers__multiple_schedule_triggers.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_crons.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/crons.ts ---
workflow("Crons", {
  on: triggers({
    schedule: [
      { cron: "0 0 * * *" },
      { cron: "30 12 * * 1-5" },
    ]
  }),
  jobs(ctx) {
    ctx.job("Run", {
      runs_on: "ubuntu-latest",
      steps() { run("echo scheduled") }
    })
  }
})
--- .github/workflows/generated_crons.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Crons
on:
  schedule:
  - cron: 0 0 * * *
  - cron: 30 12 * * 1-5
jobs:
  run:
    name: Run
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo scheduled
