tests/snapshots/cmd_generate_triggers__pull_request_target_trigger.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_pr_target.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/pr_target.ts ---
workflow("PR Target", {
  on: triggers({
    pull_request_target: {
      branches: ["main"],
      types: ["opened", "labeled"],
    }
  }),
  jobs(ctx) {
    ctx.job("Label Check", {
      runs_on: "ubuntu-latest",
      steps() { run("echo checking labels") }
    })
  }
})
--- .github/workflows/generated_pr_target.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: PR Target
on:
  pull_request_target:
    types:
    - opened
    - labeled
    branches:
    - main
jobs:
  label_check:
    name: Label Check
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo checking labels
