tests/snapshots/cmd_generate_triggers__pull_request_with_types.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_pr.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/pr.ts ---
workflow("PR", {
  on: triggers({
    pull_request: {
      branches: ["main"],
      types: ["opened", "synchronize", "reopened"],
    }
  }),
  jobs(ctx) {
    ctx.job("Check", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo check") }
    })
  }
})
--- .github/workflows/generated_pr.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: PR
on:
  pull_request:
    types:
    - opened
    - synchronize
    - reopened
    branches:
    - main
jobs:
  check:
    name: Check
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo check
