tests/snapshots/cmd_generate_triggers__push_with_tags_and_paths.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({
    push: {
      branches: ["main", "release/*"],
      tags: ["v*"],
      paths: ["src/**", "Cargo.toml"],
    }
  }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo build") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
    - release/*
    tags:
    - v*
    paths:
    - src/**
    - Cargo.toml
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
