tests/snapshots/cmd_generate_triggers__schedule_trigger.snap
---
source: tests/cmd_generate_triggers.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_nightly.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/nightly.ts ---
workflow("Nightly", {
  on: triggers({ schedule: [{ cron: "0 0 * * *" }] }),
  jobs(ctx) {
    ctx.job("Cleanup", {
      runs_on: "ubuntu-latest",
      steps() { run("echo nightly cleanup") }
    })
  }
})
--- .github/workflows/generated_nightly.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Nightly
on:
  schedule:
  - cron: 0 0 * * *
jobs:
  cleanup:
    name: Cleanup
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo nightly cleanup
